# tnvvue-2

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vue.config.js
public/: budauth_min.csv  test-small.csv
src/: App.vue  lib.rs  main.js  main.rs
src/assets/: TestData.js
src/budget/: mod.rs  nodedata.rs  rdcsv.rs  template.rs
src/components/: Contact.vue  Home.vue  Rpc.vue  TnvFlow.vue  TnvHeader.vue  TnvVote.vue
src/components/tnv3d/: Grid.vue  Hex.vue  Mesh.vue  Renderer.vue  Tnv3D.vue  WormHole.vue
src/components/tnvtree/: SliderNode.vue  TreeView.vue  TreeViewNode.vue
src/lib/: Node.js
src/router/: index.js
src/store/: index.js
test/data/: tst.json
