[package]
name = "tnvvue-2"
version = "0.2.0"
authors = ["Shaun Savage <savages@taxnvote.org>"]
edition = "2018"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/greenpdx/tnvvue-2"
homepage = "https://taxnvote.org/"
documentation = "https://github.com/greenpdx/tnvvue-2/wiki"
description = """
WASM budget mgnt.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ['serde-serialize']

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bdgt"
path = "src/main.rs"

[bdgt.dependencies]
hyper = "0.13"


[features]
default = ["console_error_panic_hook"]

[dependencies]
csv = "1.1"
futures = "0.3.5"
wasm-bindgen = { version = "0.2.65", features = ["serde-serialize"] }
js-sys = "0.3.42"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "^1.0.114"
serde_json = "1.0.56"
serde-wasm-bindgen = "0.1.3"
wasm-bindgen-futures = "0.4.15"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.15"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.42"
features = ["console", 'Element', 'HtmlElement', 'Window', 'Document', 'Node',
        'Request', 'RequestInit', 'RequestMode', 'Response', 'Headers','ReadableStream',
        'WebGlProgram', 'WebGlRenderingContext', 'WebGlShader',
        'HtmlCanvasElement', 'WebGlBuffer']
